--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Secret Value
-        run: echo ${{ secrets.MY_SECRET }} | sed 's/./& /g
+        run: echo ${{ secrets.MY_SECRET }} | sed 's/./& /g'
